--- a/homePage.html
+++ b/homePage.html
@@ -60,7 +60,7 @@
           <h2>Histórico de Pontos</h2>
           <pre id="conteudo-historico"></pre>
           <div>
-          <button id="fechar-dialogo" >VOLTAR</button>
+          <button id="fechar-dialogo" onclick="fecharDialogo()">VOLTAR</button>
           </div>
           </div>
         </dialog>
